--- a/slider-demo.html
+++ b/slider-demo.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>手写轮播图效果</title>
+    <title>Slider.js</title>
     <link rel="stylesheet" href="slider.css">
     <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
