--- a/slider-demo.html
+++ b/slider-demo.html
@@ -9,13 +9,12 @@
 <body>
     <div class="slider">
     <div id="imgsDiv">
-        <div class="picDiv" style="background-image:url(https://i.alipayobjects.com/i/ecmng/jpg/201407/31kKIcRiQ3.jpg);"></div>
-        <div class="picDiv" style="background-image:url(https://i.alipayobjects.com/i/ecmng/jpg/201406/2pMuCMfPWf_src.jpg);"></div>
-        <div class="picDiv" style="background-image:url(https://i.alipayobjects.com/i/ecmng/jpg/201406/2pMuBhXfEr_src.jpg);"></div>
-        <div class="picDiv" style="background-image:url(https://i.alipayobjects.com/i/ecmng/jpg/201406/2pMuC9bBef_src.jpg);"></div>
+	<div class="picDiv" style="background-image:url(http://fuss10.elemecdn.com/d/aa/10ea2f228dce4ef61c56c52ae5f9agif.gif);"></div>
+        <div class="picDiv" style="background-image:url(http://fuss10.elemecdn.com/0/7d/ca8c4c9252073957f9a4f9adbe665gif.gif);"></div>
+        <div class="picDiv" style="background-image:url(http://fuss10.elemecdn.com/9/ca/11535dd72c1893b1a6dc8e530d968gif.gif);"></div>
+
     </div>
     <p id="dotsDiv">
-        <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
